methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  	avance()
    while (getCouleurSol()!=color.green){
      recule()
      gauche()
      avance()
    }
  return true
}